bin_PROGRAMS = dns2tcpc 
INCLUDES = -I./includes/ -I../common/includes
CLEANFILES= *~ *.~ \#*
EXTRA_DIST = includes dns2tcprc
dns2tcpc_SOURCES =	\
			../common/hmac_sha1.c	\
			select.c		\
			../common/crc16.c	\
			rr.c			\
			../common/mycrypto.c	\
			command.c		\
			session.c		\
			../common/config.c	\
			queue.c			\
			client.c		\
			../common/list.c	\
			../common/myrand.c	\
			auth.c	 		\
			../common/dns.c 	\
			../common/mystrnlen.c 	\
			requests.c 		\
			../common/memdump.c 	\
			../common/base64.c 	\
			socket.c 		\
			options.c 		\
			main.c


