bin_PROGRAMS = dns2tcpd
INCLUDES = -I./includes/ -I../common/includes
CLEANFILES=*~
EXTRA_DIST = includes dns2tcpdrc
dns2tcpd_SOURCES =	\
			../common/hmac_sha1.c	\
			../common/crc16.c	\
			rr.c			\
			../common/mycrypto.c	\
			session.c		\
			queue.c			\
			../common/config.c	\
			../common/myrand.c	\
			auth.c	 		\
			requests.c 		\
			server.c 		\
			../common/list.c 	\
			../common/dns.c 	\
			dns_decode.c 		\
			../common/mystrnlen.c 	\
			../common/memdump.c 	\
			../common/base64.c 	\
			socket.c 		\
			options.c 		\
			main.c


